# numerical_methods

./: CMakeLists.txt
hpp/: linear_algebra.hpp  matrix.hpp
include/: computational_math.hpp  linear_algebra.hpp  matrix.hpp
iter_methods/: linear_algebra.cpp  linear_algebra.hpp  main.cpp  matrix.cpp  matrix.hpp
lu_decomposition/: CMakeLists.txt  example_input  example_output  main.cpp
lu_decomposition/hpp/: linear_algebra.hpp  matrix.hpp
lu_decomposition/src/: linear_algebra.cpp  matrix.cpp
nl_system_solver/: CMakeLists.txt  main.cpp
numerical_integration/: CMakeLists.txt  main.cpp
src/: computational_math.cpp  linear_algebra.cpp  matrix.cpp
